--- a/index.html
+++ b/index.html
@@ -20,17 +20,22 @@
     <div class="container flex-orient">
       <div class="box relative">
         <img class="img-equlibrium" src="./images/image-equilibrium.jpg" alt="">
+        <div class="background-overlay aadsolute"></div>
         <img class="icon-view" src="./images/icon-view.svg" alt="">
       </div>
       <h1>Equilibrium #3429</h1>
       <h2>Our Equilibrium collection promotes balance and calm.</h2>
       <div class="card flex-orient">
         <div class="card-content1 flex-orient">
-          <img src="./images/icon-ethereum.svg" alt="">
+          <div>
+            <img src="./images/icon-ethereum.svg" alt="">
+          </div>
           <h3>0.041 ETH</h3>
         </div>
         <div class="card-content2 flex-orient">
-          <img src="./images/icon-clock.svg" alt="">
+          <div>
+            <img src="./images/icon-clock.svg" alt="">
+          </div>
           <h3>3 days left</h3>
         </div>
       </div>
